OAP-225 move oap-json-schema to a separate module